corrected spacing on homepage

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -39,7 +39,7 @@ html, body, #root, .body{
 .mobile-header-container{
   text-align: center;
 }
-.usda-link{
+.settings-centering{
   display: flex;
   justify-content: center;
   flex-direction: column;
